--- a/NeuralNetStudioExcelAddin/ClientApp/src/dialogs/dataset-instructions.html
+++ b/NeuralNetStudioExcelAddin/ClientApp/src/dialogs/dataset-instructions.html
@@ -13,14 +13,23 @@
   </head>
   <body style="display:flex;flex-direction:column;align-items:center;justify-content:center">
     <p class="ms-font-xl">Welcome to Neural Net Studio</p>
-    <p class="ms-font-l">To create your first solution, we need to know a little about your data.</p>
+    <div class="ms-font-l">To create your first solution, we need to know a little about your data.
     
-    <p class="ms-font-l">
+    <p class="ms-font-xl">
         <ol>
             <li>Tell us which column you are going to predict.</li>
             <li>Tell us the type of question you are going to answer.</li>
         </ol>
     </p>
+    <div class="ms-font-l" style="color:red;">
+    **** Advanced ****    
+    <ol>
+      <li>Select external dataset(s) to add to your dataset.  Note: There must be a key in your dataset, e.g. if you choose Weather, there must be a date column in your dataset.</li>
+      <li>Choose which columns to exclude.  These column are in your dataset, but will not be available for predicting.</li>
+      </ol>
+  </ol>
+</div>
+  
     <!-- <input id="name-box" type="text"/><br/><br/> -->
     <button id="ok-button" class="ms-Button">Got it.</button>
   </body>
