Added UpdateSolution button to Solution page.

--- a/NeuralNetStudioExcelAddin/ClientApp/src/dialogs/feature-importances.html
+++ b/NeuralNetStudioExcelAddin/ClientApp/src/dialogs/feature-importances.html
@@ -39,7 +39,7 @@
     </div>
     </header>
   <body style="margin: 0px; padding: 40px;display:flex;flex-direction:column;align-items:center;justify-content:center">
-    <p class="ms-font-xl">Neural Net Studio</p>
+    <p class="ms-font-xl">Insight Engine</p>
     <p class="ms-font-xl">Column Importances</p>
     <p class="ms-font-l">
         <table>
