--- a/NeuralNetStudioExcelAddin/ClientApp/src/dialogs/solution-request-submitted.html
+++ b/NeuralNetStudioExcelAddin/ClientApp/src/dialogs/solution-request-submitted.html
@@ -50,12 +50,12 @@
   </div>
   </header>
   <body style="margin: 0px; padding: 40px;display:flex;flex-direction:column;align-items:center;justify-content:center">
-    <p class="ms-font-xl">Neural Net Studio</p>
+    <p class="ms-font-xl">Insight Engine</p>
     <p class="ms-font-xl">Solution Request</p>
     <p class="ms-font-l">
         Your request to create a new solution has been submitted.
         You will receive an email with the new Solution ID.
-        Please copy that ID from the email to the Solution page of the Neural Net Studio Add-in.
+        Please copy that ID from the email to the Solution page of the Insight Engine Add-in.
     </p>
     <!-- <input id="name-box" type="text"/><br/><br/> -->
     <button id="ok-button" onclick="closeMe()" class="ms-Button">Got it.</button>
