--- a/NeuralNetStudioExcelAddin/ClientApp/src/dialogs/dataset-instructions.html
+++ b/NeuralNetStudioExcelAddin/ClientApp/src/dialogs/dataset-instructions.html
@@ -39,7 +39,7 @@
     </div>
     </header>
   <body style="margin: 0px; padding: 40px;display:flex;flex-direction:column;align-items:center;justify-content:center">
-    <p class="ms-font-xl">Welcome to Neural Net Studio</p>
+    <p class="ms-font-xl">Welcome to Insight Engine</p>
     <div class="ms-font-l">To create your first solution, we need to know a little about your data.
     
     <p class="ms-font-xl">
